# ottstreamer

./: .gitignore  docker-compose.yml  gst-plugins-bad-1.14.4.patch  gst-plugins-good-1.14.4.patch  rtp2hls.py
aws/ais/: ais_encoder.json  ais_fargate.ipynb  ais_recorder.json  ais_redis.json  ais_stream_nick.json  ais_stream_nick_ec2.json  ais_webapp.json
encoder/: encode_playlist.py  encoder_mockup.ipynb  requirements.txt
encoder/tests/: encoder.bat  encoder_ap
gstreamer-patches/patchfiles/: README.md  gst-plugins-bad-1.14.4.patch  gst-plugins-good-1.14.4.patch
hls2rtp/: AUTHORS  configure.ac
hls2rtp/Setup/: Setup.vdproj
hls2rtp/src/: Makefile.am  hls2rtp.c  hls2rtp.sln  hls2rtp.vcxproj  hls2rtp_nicktoons_hun  ottstreamer.c  postinstall.vbs
hls2rtp/tests/: hls2rtp  hls2rtp_ap.bat  hls2rtp_mtvlivehd  identitylog.ipynb
legalrecorder/: README.md  legal_recorder  legal_recorder.py  multiviewer.py  requirements.txt  timeline_parser.ipynb
legalrecorder/src/: playlist.c
playlistlocaliser/: localiser_nicktoons_czech.py
playlistlocalizer/: .dockerignore  2019-08-05_Nicktoons_Hungary.xls  Dockerfile  README.md  create_playlists.py  localizer_mockup.ipynb  playlist_localizer.py  requirements.txt
rtp2hls/rtp2hls/src/: Makefile.am  playlist.c  playlist.h  rtp2hls.c  rtp2hls_nicktoons_pol
webapp/: .flaskenv  asrun_mockup.ipynb  cache_commercials.ipynb  config.py  continuity_mockup.ipynb  encoderlog_mockup.ipynb  import_playlists_mockup.ipynb  ottstreamer.conf  ottstreamer.wsgi  redis mockup.ipynb  requirements.txt  timelinejs_mockup.ipynb  webapp_mockup.ipynb
(+45 files in other folders)
