# name of your binary
bin_PROGRAMS = hls2rtp

# list of source files
# the prefix is the name of the binary
hls2rtp_SOURCES = hls2rtp.c

# list of headers we're not going to install
noinst_HEADERS = 

# our CFLAGS and LDFLAGS used for compiling and linking
# make sure you prefix these with the name of your binary
hls2rtp_CFLAGS = $(GST_CFLAGS)
hls2rtp_LDFLAGS = $(GST_LIBS)
